2012-02-24  ikeji <syun@ikejima.org>

	* Initial import ruby-hidmon.
	* Merge hidaspx package which is named hidspx-2011-0720.zip